<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/airTicketsFragment"
        android:icon="@drawable/vector_air"
        android:title="@string/air_tickets"/>
    <item
        android:id="@+id/hotelsFragment"
        android:icon="@drawable/bed"
        android:title="@string/hotels"/>
    <item
        android:id="@+id/inShortFragment"
        android:icon="@drawable/location_on"
        android:title="@string/in_short"/>
    <item
        android:id="@+id/subscriptionsFragment"
        android:icon="@drawable/notifications"
        android:title="@string/subscriptions"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/person"
        android:title="@string/profile"/>

</menu>