<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_bottom_item_for_popular_destination">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/width_container_bottom_item_for_popular_destination"
        android:layout_height="@dimen/height_container_bottom_item_for_popular_destination"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/width_card_view_item_for_popular_destination"
            android:layout_height="@dimen/height_card_view_item_for_popular_destination"
            app:cardCornerRadius="@dimen/corner_radius_card_view_item_for_popular_destination"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_popular_destination"
                android:scaleType="centerCrop"
                android:src="@drawable/istanbul"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="@dimen/width_container_for_description_item_for_popular_destination"
            android:layout_height="@dimen/height_container_for_description_item_for_popular_destination"
            android:layout_marginStart="@dimen/margin_start_container_for_description_item_for_popular_destination"
            android:layout_marginTop="@dimen/margin_top_container_for_description_item_for_popular_destination"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/city_name"
                style="@style/edit_text_where_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/istanbul" />

            <TextView
                android:id="@+id/characteristic"
                style="@style/edit_text_where_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/popular_destination" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/grey_4"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>